prusti/tests/parse/ui/simple_and.stderr
error[E0308]: mismatched types
 --> $DIR/simple_and.rs:3:13
  |
3 | #[requires="12345"]
  |             ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
 --> $DIR/simple_and.rs:6:18
  |
6 | #[requires=     "12345"]
  |                  ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:15:6
   |
15 |     "12345" ]
   |      ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:20:5
   |
20 |     12345
   |     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:27:5
   |
27 |     12345
   |     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:32:21
   |
32 | #[requires="true && 12345"]
   |                     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:37:5
   |
37 |     12345  
   |     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:42:13
   |
42 |             456"]
   |             ^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
